--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <h1 class="heading">Tic Tac Toe</h1>
+    <h2 class="turn-banner">Ali's turn</h2>
+    <div class="grid-cont">
+        <div class="gridbox">
+            <div class="cells c1"></div>
+            <div class="cells c2"></div>
+            <div class="cells c3"></div>
+            <div class="cells c4"></div>
+            <div class="cells c5"></div>
+            <div class="cells c6"></div>
+            <div class="cells c7"></div>
+            <div class="cells c8"></div>
+            <div class="cells c9"></div>
+        </div>
+    </div>
+    <h2 class="winner-banner">XYZ has won</h2>
     <script src="script.js"></script>
 </body>
 </html>
