adding functionality to dom

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="cells c9"></div>
         </div>
     </div>
-    <h2 class="winner-banner">XYZ has won</h2>
+    <h2 class="winner-banner">XYZ</h2>
     <script src="script.js"></script>
 </body>
 </html>
